--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -65,6 +65,14 @@
 	margin-top: 25px;
 }
 
+.paragraph {
+	color: var(--secondary-color);
+	font-size: 18px;
+	line-height: 24px;
+	width: 70%;
+	margin-top: 10px;
+}
+
 .page-footer {
 	position: block;
 }
