--- a/src/pages/styles/about.css
+++ b/src/pages/styles/about.css
@@ -1,18 +1,3 @@
-.about-logo-container {
-	display: flex;
-	justify-content: left;
-	padding-top: 25px;
-}
-
-.about-logo {
-	display: flex;
-	position: fixed;
-	border: 1px solid white;
-	border-radius: 50%;
-	box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.25);
-	top: 4vh;
-}
-
 .about-container {
 	display: flex;
 	flex-direction: column;
@@ -43,23 +28,6 @@
 	display: flex;
 	flex-direction: column;
 	flex-basis: 300px;
-}
-
-.about-image-container {
-	width: 370px;
-}
-
-.about-image-wrapper {
-	display: inline-block;
-	overflow: hidden;
-	width: 100%;
-	border-radius: 10%;
-	transform: rotate(3deg);
-}
-
-.about-image-wrapper img {
-	display: block;
-	width: 100%;
 }
 
 .about-socials {
@@ -116,4 +84,24 @@
 	.about-image-container {
 		width: 80%;
 	}
+}
+
+
+.about-section {
+	position: relative !important;
+	padding-top: 0px !important;
+	padding-bottom: 30px !important;
+	background-image: var(--section-background-color) !important;
+	color: #646464 !important;
+}
+
+.project-heading {
+	color: rgb(0, 0, 0) !important;
+	font-size: 2.3em !important;
+	font-weight: 500 !important;
+	padding-top: 10px !important;
+}
+
+.purple {
+	color: #c770f0 !important;
 }
