--- a/src/components/projects/styles/headerProject.css
+++ b/src/components/projects/styles/headerProject.css
@@ -12,10 +12,10 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding-top: 10vh;
   height: 80vh;
   letter-spacing: 1px;
-  line-height:2;
-  padding-bottom: 16vh;
+  line-height:1.25;
 }
 
 h1 {
@@ -25,10 +25,9 @@ h1 {
   -moz-background-clip: text;
   -webkit-background-clip: text;
   background-clip: text;
-  text-transform: uppercase;
-  font-size: 120px;
   margin: 10px 0;
 }
+
 /* styling my button */
 
 .white-mode {
