--- a/src/components/projects/styles/headerProject.css
+++ b/src/components/projects/styles/headerProject.css
@@ -12,13 +12,17 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding-top: 10vh;
-  height: 80vh;
+  height: 72vh;
+  padding-bottom: 8vh;
   letter-spacing: 1px;
   line-height:1.25;
 }
 
-h1 {
+.header-project-mobile {
+  display: "none";
+}
+
+.h1-normal {
   background-image: url(https://media.giphy.com/media/26BROrSHlmyzzHf3i/giphy.gif);
   background-size: cover;
   color: transparent;
@@ -26,6 +30,10 @@ h1 {
   -webkit-background-clip: text;
   background-clip: text;
   margin: 10px 0;
+}
+
+.h1-mobile {
+  display: none;
 }
 
 /* styling my button */
@@ -47,3 +55,39 @@ h1 {
   background-color: #FFF;
   color: #122;
 }
+
+
+@media (max-width: 1024px) {
+  .header-project {
+    display: none;
+  }
+
+  .header-project-mobile {
+    font-family: "Cairo";
+    text-align: center;
+    color: #FFF;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 72vh;
+    padding-bottom: 8vh;
+    letter-spacing: 1px;
+    line-height:1.25;
+  }
+
+	.h1-normal {
+		display: none;
+	}
+
+	.h1-mobile {
+		background-image: url(https://media.giphy.com/media/26BROrSHlmyzzHf3i/giphy.gif);
+    background-size: cover;
+    color: transparent;
+    -moz-background-clip: text;
+    -webkit-background-clip: text;
+    background-clip: text;
+    margin: 10px 0;
+	}
+}
+
