--- a/src/components/projects/styles/allProjects.css
+++ b/src/components/projects/styles/allProjects.css
@@ -1,22 +1,23 @@
 .all-projects-container {
 	display: flex;
 	flex-wrap: wrap;
-	align-items: stretch;
+	justify-content: center;
 	padding-top: 30px;
 	padding-bottom: 30px;
-	margin-left: -35px;
-	margin-right: -35px;
+	margin-left: 0px;
+	margin-right: 0px;
 }
 
 .all-projects-project {
-	width: calc(100% / 3);
+	width: 30%;
 	box-sizing: border-box;
-	padding: 10px;
+	height: 320px;
+	margin: 0px, 10px;
 	overflow: hidden;
 }
 
 @media (max-width: 600px) {
 	.all-projects-project {
-		width: calc(100% / 2);
+		width: 100%;
 	}
 }
