about page updated

--- a/src/components/about/styles/socials.css
+++ b/src/components/about/styles/socials.css
@@ -1,3 +1,6 @@
+/* © 2025 kerem.ai · All rights reserved. */
+/* This file contains the styles for the Socials component. */
+
 @import "../../../data/styles.css";
 .social,
 .email-wrapper {
@@ -17,8 +20,8 @@
 
 .social-text {
 	color: var(--secondary-color);
-	padding-left: 30px;
-	margin-top: -20px;
+	padding-left: 20px;
+	margin-top: -22px;
 	font-weight: 600;
 	font-size: 14px;
 }
