--- a/src/components/about/styles/techstack.css
+++ b/src/components/about/styles/techstack.css
@@ -1,3 +1,5 @@
+/* © 2025 kerem.ai · All rights reserved. */
+/* This file contains the styles for the TechStack component. */
 
 .tech-icons {
   font-size: 5em !important;
