--- a/src/pages/styles/homepage.css
+++ b/src/pages/styles/homepage.css
@@ -2,7 +2,11 @@
 
 
 .homepage-container {
-	padding-top: 120px;
+	display: flex;
+	flex-direction: column;
+	height: 100%;
+	margin: 0;
+	padding-top: 6vh;
 }
 
 .homepage-first-area {
