--- a/src/components/projects/styles/allProjects.css
+++ b/src/components/projects/styles/allProjects.css
@@ -1,23 +1,46 @@
+/* © 2025 kerem.ai · All rights reserved. */
+/* This file contains the styles for the all projects component. */
+
 .all-projects-container {
 	display: flex;
 	flex-wrap: wrap;
-	justify-content: center;
-	padding-top: 30px;
-	padding-bottom: 30px;
-	margin-left: 0px;
-	margin-right: 0px;
+	justify-content: start;
+	padding-top: 2vh;
+	padding-bottom: 4vh;
+	width: 100%;
+	gap: 20px;
+	margin-bottom: 20px;
 }
 
 .all-projects-project {
 	width: 30%;
 	box-sizing: border-box;
-	height: 320px;
-	margin: 0px, 10px;
-	overflow: hidden;
+	min-height: 320px;
+	height: auto;
+	margin: 0;
+	overflow: visible;
 }
 
 @media (max-width: 600px) {
+	.all-projects-container {
+		padding-bottom: 6vh;
+	}
+
 	.all-projects-project {
-		width: 100%;
+		width: 90%;
+		margin: 0 auto;
+		min-height: 280px;
+	}
+}
+
+@media (min-width: 601px) and (max-width: 900px) {
+	.all-projects-container {
+		padding-bottom: 5vh;
+	}
+
+	.all-projects-project {
+		width: 45%;
+		margin: 0;
+		min-height: 300px;
 	}
 }
