--- a/src/components/projects/styles/project.css
+++ b/src/components/projects/styles/project.css
@@ -1,3 +1,6 @@
+/* © 2025 kerem.ai · All rights reserved. */
+/* This file contains the styles for the project component. */
+
 @import "../../../data/styles.css";
 
 .project {
@@ -5,25 +8,20 @@
 	border-radius: 20px;
 	opacity: 0.8;
 	height: 100%;
+	display: flex;
+	flex-direction: column;
+	border: 2px solid #c770f0;
 }
 
 .project a {
 	text-decoration: none;
 }
 
-.project:hover {
-	background: #fafafa;
-	opacity: 1;
-	transition: background-color 0.3s ease-in-out;
-}
-
-.project:hover .project-link {
-	color: var(--link-color);
-	transition: color 0.3s ease-in-out;
-}
-
 .project-container {
 	padding: 30px;
+	display: flex;
+	flex-direction: column;
+	height: 100%;
 }
 
 .project-logo {
@@ -45,6 +43,13 @@
 
 .project-description {
 	color: var(--secondary-color);
+	flex-grow: 1;
+}
+
+.project-status {
+	color: var(--secondary-color);
+	font-size: 14px;
+	margin-bottom: 20px;
 }
 
 .project-link {
@@ -52,7 +57,7 @@
 	align-items: center;
 	color: var(--secondary-color);
 	font-size: 12px;
-	padding-top: 20px;
+	margin-top: auto;
 }
 
 .project-link-icon {
@@ -69,4 +74,25 @@
 	.project {
 		height: 300px;
 	}
+}
+
+/* Hover effects */
+
+.project:hover {
+	opacity: 1;
+	border: 2px solid #c770f0;
+	transition: background-color 0.3s ease-in-out;
+}
+
+.project:hover .project-link {
+	color: #000000;
+	transition: color 0.3s ease-in-out;
+}
+
+.project:hover .project-description {
+	color: #000000;
+}
+
+.project:hover .project-status {
+	color: #000000;
 }
