--- a/src/components/homepage/styles/homeGrid.css
+++ b/src/components/homepage/styles/homeGrid.css
@@ -119,4 +119,8 @@ In the mobile version, the grid is displayed vertically.
     margin-bottom: 10vh;
   }
 
+  .carousel {
+    margin-top: 6vh;
+    margin-bottom: 6vh;
+  }
 }
