--- a/src/pages/styles/404.css
+++ b/src/pages/styles/404.css
@@ -1,3 +1,6 @@
+/* © 2025 kerem.ai · All rights reserved. */
+/* This file contains the styles for the 404 page. */
+
 .not-found {
 	overflow: hidden;
 	height: 100vh;
