--- a/src/components/common/styles/header.css
+++ b/src/components/common/styles/header.css
@@ -31,12 +31,12 @@ including the header animation and navigation bar.
 
 .header-nav-background {
 	width: 72vw;
-	height: 4.4vh;
+	height: 2.4em;
 	padding-left: 0%;
 	padding-right: 0%;
 	background: #fff;
 	box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
-	border-radius: 2vh;
+	border-radius: 20px;
 }
 
 .header-nav-list {
@@ -51,7 +51,7 @@ including the header animation and navigation bar.
 /* Navbar items */
 
 .header-nav-item {
-    margin-top: 1vh;
+    margin-top: 0.5em;
 	font-weight: bold;
 	font-size: 100%;
 }
@@ -80,6 +80,7 @@ including the header animation and navigation bar.
 
 	.header-nav-background {
 		width: 88%;
+		border-radius: 8px;
 	}
 
 	.header-nav-item {
